<resources>
    <string name="app_name">WebsocketDemo</string>
    <string name="generate">Generate</string>
    <string name="subscribe">Subscribe</string>
    <string name="empty">Waiting for the generation...</string>
    <string name="amount">Amount</string>
    <string name="sent_amount">has sent %2d OMG.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consume">Consume</string>
    <string name="show_qr">Show QR</string>
</resources>
