<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Main content -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary800Color"
        app:layout_constraintEnd_toEndOf="@+id/tvUserInfo"
        app:layout_constraintStart_toEndOf="@+id/tvUserInfo">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:outlineSpotShadowColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            app:boxStrokeColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserInfo">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:outlineSpotShadowColor="@color/primaryTextColor"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/btnGenerate"
            style="@style/Widget.MaterialComponents.Button"
            fontFamily="@font/raleway_semibold"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@drawable/state_button"
            android:text="@string/generate"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAmount" />

        <android.support.design.card.MaterialCardView
            android:id="@+id/cardViewTransaction"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="#fafafa"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGenerate"
            app:strokeColor="#d7c4d1">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextHeadline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Transaction" />

            <include
                android:id="@+id/layoutTransaction"
                layout="@layout/layout_transaction" />

            <TextView
                android:id="@+id/tvEmpty"
                style="@style/TextDisableSubtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty"
                android:visibility="visible" />

        </android.support.design.card.MaterialCardView>

        <android.support.design.button.MaterialButton
            android:id="@+id/btnSubscribe"
            style="@style/Widget.MaterialComponents.Button"
            fontFamily="@font/raleway_semibold"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@drawable/state_button"
            android:text="@string/subscribe"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btnShowQR"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            fontFamily="@font/raleway_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/show_qr"
            android:textColor="@color/primaryLightColor"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTransaction" />

        <TextView
            android:id="@+id/tvUserInfo"
            style="@style/TextHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="User1's balance = 1,000 OMG"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <!-- Bottom sheet -->
    <include layout="@layout/bottom_sheet_requestor" />
</android.support.design.widget.CoordinatorLayout>
